fixed dark mode

--- a/app/globals.css
+++ b/app/globals.css
@@ -2,7 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 .darkFontLight {
-  @apply bg-white text-slate-700 dark:bg-slate-700 dark:text-white;
+  @apply bg-white text-gray-900 dark:bg-gray-900 dark:text-white;
 }
 .bgDarkFontLight {
   @apply bg-stone-100 text-black dark:bg-black dark:text-stone-100;
